--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
 
     <section class="about">
       <h2>Sobre Nós</h2>
-      <p>Bem-vindo ao nosso portfólio! Aqui você encontrará algumas das nossas fotos favoritas. Apreciamos capturar momentos especiais juntos.</p>
+      <p>
+        Quem encontra uma esposa
+<br> encontra algo excelente;
+<br> recebeu uma bênção do Senhor.
+<br> Provérbios 18:22
+        .</p>
     </section>
   </div>
 
